refactor DAGScheduler and DAGJob with jgrapht