@@ -7,6 +7,7 @@
  */
 package com.mogujie.jarvis.server.scheduler.dag;
 
+import org.jgrapht.experimental.dag.DirectedAcyclicGraph.CycleFoundException;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -45,101 +46,106 @@ public class TestDAGScheduler {
      *   A   B
      *    \ /
      *     C
+     * @throws CycleFoundException
      */
     @Test
-    public void testAddJob1() {
+    public void testAddJob1() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, null);
         scheduler.addJob(jobC.getJobId(), jobC, Sets.newHashSet(jobA.getJobId(),jobB.getJobId()));
-        Assert.assertEquals(1, jobA.getChildren().size());
-        Assert.assertEquals(3, jobA.getChildren().get(0).getJobId());
-        Assert.assertEquals(1, jobB.getChildren().size());
-        Assert.assertEquals(3, jobB.getChildren().get(0).getJobId());
-        Assert.assertEquals(2, jobC.getParents().size());
+        Assert.assertEquals(1, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobA.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(2, scheduler.getParents(jobC.getJobId()).size());
     }
 
     /**
      *     A
      *    / \
      *   B   C
+     * @throws CycleFoundException
      */
     @Test
-    public void testAddJob2() {
+    public void testAddJob2() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, Sets.newHashSet(jobA.getJobId()));
         scheduler.addJob(jobC.getJobId(), jobC, Sets.newHashSet(jobA.getJobId()));
-        Assert.assertEquals(2, jobA.getChildren().size());
-        Assert.assertEquals(1, jobB.getParents().size());
-        Assert.assertEquals(1, jobB.getParents().get(0).getJobId());
-        Assert.assertEquals(1, jobC.getParents().size());
-        Assert.assertEquals(1, jobC.getParents().get(0).getJobId());
+        Assert.assertEquals(2, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(1, scheduler.getParents(jobB.getJobId()).size());
+        Assert.assertEquals(1, (long)scheduler.getParents(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getParents(jobC.getJobId()).size());
+        Assert.assertEquals(1, (long)scheduler.getParents(jobC.getJobId()).get(0).getFirst());
     }
 
     /**
      *   A   B        A
      *    \ /   -->   |
      *     C          C
+     * @throws CycleFoundException
      */
     @Test
-    public void testRemoveJob1() {
+    public void testRemoveJob1() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, null);
         scheduler.addJob(jobC.getJobId(), jobC, Sets.newHashSet(jobA.getJobId(),jobB.getJobId()));
-        Assert.assertEquals(1, jobA.getChildren().size());
-        Assert.assertEquals(3, jobA.getChildren().get(0).getJobId());
-        Assert.assertEquals(1, jobB.getChildren().size());
-        Assert.assertEquals(3, jobB.getChildren().get(0).getJobId());
-        Assert.assertEquals(2, jobC.getParents().size());
+        Assert.assertEquals(1, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobA.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(2, scheduler.getParents(jobC.getJobId()).size());
 
         scheduler.removeJob(jobB);
-        Assert.assertEquals(1, jobA.getChildren().size());
-        Assert.assertEquals(3, jobA.getChildren().get(0).getJobId());
-        Assert.assertEquals(1, jobC.getParents().size());
-        Assert.assertEquals(1, jobC.getParents().get(0).getJobId());
+        Assert.assertEquals(1, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobA.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getParents(jobC.getJobId()).size());
+        Assert.assertEquals(1, (long)scheduler.getParents(jobC.getJobId()).get(0).getFirst());
     }
 
     /**
      *   A   B
      *    \ /   -->  A  B
      *     C
+     * @throws CycleFoundException
      */
     @Test
-    public void testRemoveJob2() {
+    public void testRemoveJob2() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, null);
         scheduler.addJob(jobC.getJobId(), jobC, Sets.newHashSet(jobA.getJobId(),jobB.getJobId()));
-        Assert.assertEquals(1, jobA.getChildren().size());
-        Assert.assertEquals(3, jobA.getChildren().get(0).getJobId());
-        Assert.assertEquals(1, jobB.getChildren().size());
-        Assert.assertEquals(3, jobB.getChildren().get(0).getJobId());
-        Assert.assertEquals(2, jobC.getParents().size());
+        Assert.assertEquals(1, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobA.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(3, (long)scheduler.getChildren(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(2, scheduler.getParents(jobC.getJobId()).size());
 
         scheduler.removeJob(jobC);
-        Assert.assertEquals(0, jobA.getChildren().size());
-        Assert.assertEquals(0, jobB.getChildren().size());
-        Assert.assertEquals(0, jobC.getParents().size());
+        Assert.assertEquals(0, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(0, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(0, scheduler.getParents(jobC.getJobId()).size());
     }
 
     /**
      *     A
      *    / \   -->  B  C
      *   B   C
+     * @throws CycleFoundException
      */
     @Test
-    public void testRemoveJob3() {
+    public void testRemoveJob3() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, Sets.newHashSet(jobA.getJobId()));
         scheduler.addJob(jobC.getJobId(), jobC, Sets.newHashSet(jobA.getJobId()));
-        Assert.assertEquals(2, jobA.getChildren().size());
-        Assert.assertEquals(1, jobB.getParents().size());
-        Assert.assertEquals(1, jobB.getParents().get(0).getJobId());
-        Assert.assertEquals(1, jobC.getParents().size());
-        Assert.assertEquals(1, jobC.getParents().get(0).getJobId());
+        Assert.assertEquals(2, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(1, scheduler.getParents(jobB.getJobId()).size());
+        Assert.assertEquals(1, (long)scheduler.getParents(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getParents(jobC.getJobId()).size());
+        Assert.assertEquals(1, (long)scheduler.getParents(jobC.getJobId()).get(0).getFirst());
 
         scheduler.removeJob(jobA);
-        Assert.assertEquals(0, jobA.getChildren().size());
-        Assert.assertEquals(0, jobB.getParents().size());
-        Assert.assertEquals(0, jobC.getParents().size());
+        Assert.assertEquals(0, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(0, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(0, scheduler.getChildren(jobC.getJobId()).size());
     }
 
     /**
@@ -148,25 +154,26 @@ public class TestDAGScheduler {
      *     B   -->    / \
      *     |         B   C
      *     C
+     * @throws CycleFoundException
      */
     @Test
-    public void testModifyDependency() {
+    public void testModifyDependency() throws Exception {
         scheduler.addJob(jobA.getJobId(), jobA, null);
         scheduler.addJob(jobB.getJobId(), jobB, null);
         scheduler.addJob(jobC.getJobId(), jobC, null);
 
         scheduler.addDependency(jobA.getJobId(), jobB.getJobId());
         scheduler.addDependency(jobB.getJobId(), jobC.getJobId());
-        Assert.assertEquals(1, jobA.getChildren().size());
-        Assert.assertEquals(jobB.getJobId(), jobA.getChildren().get(0).getJobId());
-        Assert.assertEquals(1, jobB.getParents().size());
-        Assert.assertEquals(jobA.getJobId(), jobB.getParents().get(0).getJobId());
-        Assert.assertEquals(1, jobB.getChildren().size());
-        Assert.assertEquals(jobC.getJobId(), jobB.getChildren().get(0).getJobId());
+        Assert.assertEquals(1, scheduler.getChildren(jobA.getJobId()).size());
+        Assert.assertEquals(jobB.getJobId(), (long)scheduler.getChildren(jobA.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getParents(jobB.getJobId()).size());
+        Assert.assertEquals(jobA.getJobId(), (long)scheduler.getParents(jobB.getJobId()).get(0).getFirst());
+        Assert.assertEquals(1, scheduler.getChildren(jobB.getJobId()).size());
+        Assert.assertEquals(jobC.getJobId(), (long)scheduler.getChildren(jobB.getJobId()).get(0).getFirst());
 
         scheduler.removeDependency(jobB.getJobId(), jobC.getJobId());
         scheduler.addDependency(jobA.getJobId(), jobC.getJobId());
-        Assert.assertEquals(2, jobA.getChildren().size());
+        Assert.assertEquals(2, scheduler.getChildren(jobA.getJobId()).size());
     }
 
 }
